BACKEND-1: fixed bugs
